--- a/O2O.Admin.Web/Web.config
+++ b/O2O.Admin.Web/Web.config
@@ -18,7 +18,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
-	  <sessionState mode="SQLServer" allowCustomSqlDatabase="true" sqlConnectionString="server=.;database=O2O;uid=sa;pwd=123" timeout="1000"></sessionState>
+	  <!--<sessionState mode="SQLServer" allowCustomSqlDatabase="true" sqlConnectionString="server=.;database=O2O;uid=sa;pwd=123" timeout="1000"></sessionState>-->
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -73,7 +73,7 @@
 			<param name="File" value="App_Data/Log" />
 			<param name="AppendToFile" value="true" />
 			<param name="RollingStyle" value="Date" />
-			<param name="DatePattern" value="&quot;Logs_&quot;yyyyMMdd&quot;.txt&quot;" />
+			<param name="DatePattern" value="yyyyMMdd&quot;.txt&quot;" />
 			<param name="StaticLogFileName" value="false" />
 			<layout type="log4net.Layout.PatternLayout,log4net">
 				<param name="ConversionPattern" value="%d [%t] %-5p %c - %m%n" />
