--- a/O2O.Admin.Web/bin/O2O.Admin.Web.dll.config
+++ b/O2O.Admin.Web/bin/O2O.Admin.Web.dll.config
@@ -90,7 +90,7 @@
 			<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
 		</providers>
 	</entityFramework>
-	<!--<connectionStrings>
+	<connectionStrings>
 		<add name="connStr" connectionString="Data Source=114.215.84.170;Initial Catalog=BakO2O;User ID=wxcs;Password=wxcs123;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient" />
-	</connectionStrings>-->
+	</connectionStrings>
 </configuration>
